// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UtilityButton correctly applies the theme context className 1`] = `
<ContextProvider
  value={
    Object {
      "className": "orion-fusion-theme",
      "density": undefined,
      "name": undefined,
    }
  }
>
  <InjectIntl(UtilityButton)
    initialSelectedKey="menu"
    menuItems={Array []}
    onChange={[MockFunction]}
    onDisclose={[MockFunction]}
    onRequestClose={[MockFunction]}
    variant="header"
  />
</ContextProvider>
`;

exports[`UtilityButton it should pass in a custom prop 1`] = `
<UtilityButton
  id="test"
  initialSelectedKey="menu"
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  menuItems={Array []}
  onChange={[MockFunction]}
  onDisclose={[MockFunction]}
  onRequestClose={[MockFunction]}
  title=""
  variant="header"
/>
`;

exports[`UtilityButton should render with a title 1`] = `
<UtilityButton
  initialSelectedKey="menu"
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  menuItems={Array []}
  onChange={[MockFunction]}
  onDisclose={[MockFunction]}
  onRequestClose={[MockFunction]}
  title="name"
  variant="header"
/>
`;

exports[`UtilityButton should render with an accessory 1`] = `
<UtilityButton
  accessory={<image />}
  initialSelectedKey="menu"
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  menuItems={Array []}
  onChange={[MockFunction]}
  onDisclose={[MockFunction]}
  onRequestClose={[MockFunction]}
  title=""
  variant="header"
/>
`;

exports[`UtilityButton should render with default props 1`] = `
<UtilityButton
  initialSelectedKey="menu"
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  menuItems={Array []}
  onChange={[MockFunction]}
  onDisclose={[MockFunction]}
  onRequestClose={[MockFunction]}
  title=""
  variant="header"
/>
`;

exports[`UtilityButton should render with menu items 1`] = `
<UtilityButton
  initialSelectedKey="menu"
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  menuItems={
    Array [
      Object {
        "childKeys": Array [
          "item-1",
          "item-2",
          "item-3",
          "item-4",
          "item-5",
          "item-6",
          "item-7",
          "item-8",
        ],
        "contentLocation": "body",
        "isSelectable": false,
        "isSelected": false,
        "key": "menu",
        "metaData": Object {
          "otherInformation": "Other Information",
        },
        "title": "Menu",
      },
      Object {
        "childKeys": Array [
          "item-1.1",
        ],
        "content": undefined,
        "contentLocation": "body",
        "isSelectable": false,
        "isSelected": false,
        "key": "item-1",
        "title": "Name",
      },
      Object {
        "childKeys": Array [
          "item-2.1",
          "item-2.2",
        ],
        "id": "test-item-2",
        "isSelectable": false,
        "isSelected": false,
        "key": "item-2",
        "title": "Profile",
      },
      Object {
        "childKeys": Array [],
        "contentLocation": "footer",
        "isSelectable": false,
        "isSelected": false,
        "key": "item-3",
        "title": "Notifications",
      },
      Object {
        "childKeys": Array [
          "item-4.1",
          "item-4.2",
          "item-4.3",
        ],
        "contentLocation": "body",
        "isSelectable": false,
        "isSelected": false,
        "key": "item-4",
        "title": "Projects",
      },
      Object {
        "childKeys": Array [],
        "contentLocation": "body",
        "isSelectable": false,
        "isSelected": false,
        "key": "item-1.1",
        "metaData": Object {
          "otherInformation": "Other Information",
        },
        "title": "John Doe",
      },
      Object {
        "childKeys": Array [],
        "contentLocation": "body",
        "isSelectable": false,
        "isSelected": false,
        "key": "item-2.1",
        "title": "Gender: Male",
      },
      Object {
        "childKeys": Array [],
        "contentLocation": "body",
        "isSelectable": false,
        "isSelected": false,
        "key": "item-2.2",
        "title": "Location: Germany",
      },
      Object {
        "childKeys": Array [],
        "contentLocation": "body",
        "isSelectable": false,
        "isSelected": false,
        "key": "item-4.1",
        "title": "Project 1",
      },
      Object {
        "childKeys": Array [],
        "contentLocation": "body",
        "isSelectable": false,
        "isSelected": false,
        "key": "item-4.2",
        "title": "Project 2",
      },
      Object {
        "childKeys": Array [],
        "contentLocation": "body",
        "isSelectable": false,
        "isSelected": false,
        "key": "item-4.3",
        "title": "Project 3",
      },
      Object {
        "childKeys": Array [
          "item-5.1",
          "item-5.2",
        ],
        "contentLocation": "body",
        "isSelectable": false,
        "isSelected": false,
        "key": "item-5",
        "title": "Skills",
      },
      Object {
        "childKeys": Array [],
        "contentLocation": "body",
        "isSelectable": true,
        "isSelected": false,
        "key": "item-5.1",
        "title": "Skill 1",
      },
      Object {
        "childKeys": Array [],
        "contentLocation": "body",
        "isSelectable": true,
        "isSelected": false,
        "key": "item-5.2",
        "title": "Skill 2",
      },
      Object {
        "childKeys": Array [],
        "contentLocation": "footer",
        "isSelectable": true,
        "isSelected": false,
        "key": "item-6",
        "title": "Logout",
      },
      Object {
        "childKeys": Array [],
        "contentLocation": "body",
        "id": "test-item-7",
        "isSelectable": false,
        "isSelected": true,
        "key": "item-7",
        "title": "Drill-down capabilities provide the ability for the end-user to access different levels of information without creating ad hoc queries for each level of information. Instead the user is able to drill down to a detail level, or elevate to the summary level, through pull-down menus or mouse clicks.",
      },
      Object {
        "childKeys": Array [],
        "contentLocation": "body",
        "id": "test-item-8",
        "isReadOnly": true,
        "isSelectable": false,
        "isSelected": false,
        "key": "item-8",
        "title": "Last logged in: yesterday",
      },
    ]
  }
  onChange={[MockFunction]}
  onDisclose={[MockFunction]}
  onRequestClose={[MockFunction]}
  title=""
  variant="header"
/>
`;
